--- a/site_gen/humble_astro/src/layouts/Layout.astro
+++ b/site_gen/humble_astro/src/layouts/Layout.astro
@@ -95,6 +95,8 @@ const { title } = Astro.props;
 				}
 			});
 		</script>
+		<!-- analytics -->
+		<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 	</body>
 </html>
 
