added a faq page for why some bundles are still available even when they ended

--- a/site_gen/humble_astro/src/pages/faq.astro
+++ b/site_gen/humble_astro/src/pages/faq.astro
@@ -32,6 +32,15 @@ import Layout from '../layouts/Layout.astro';
                 </p>
             </div>
         </div>
+
+        <div class="faq-item card">
+            <h2>The bundle is still active, but is in the 'past bundles' section</h2>
+            <div class="faq-content">
+                <p>
+                    Some of these bundles get their end dates moved back. The current version of the script will not update bundles once they are added.
+                </p>
+            </div>
+        </div>
     </section>
 </Layout>
 
