added a FAQ item for remarks and feedback

--- a/site_gen/humble_astro/src/pages/faq.astro
+++ b/site_gen/humble_astro/src/pages/faq.astro
@@ -16,11 +16,18 @@ import Layout from '../layouts/Layout.astro';
                     This is an automated site that uses scraping to get the reviews. This means that errors can occur.
                 </p>
                 <p>
-                    When you find a faulty link, send me a mail or create a github issue. I'll try to fix this issue as soon as possible.
+                    When you find a faulty link, send us a mail or create a github issue. We'll try to fix this issue as soon as possible.
                 </p>
                 <div class="faq-actions">
                     <a href="https://github.com/JensPenny/humble-book-bun/issues/new" target="_blank" class="btn">Report Faulty Link</a>
                 </div>
+            </div>
+        </div>
+
+        <div class="faq-item card">
+            <h2>I have a suggestion on how you could improve the site / goodreads review</h2>
+            <div class="faq-content">
+                <p>Thanks, we welcome any additions and remarks. Feel free to open up a pull request on <a href="https://github.com/JensPenny/humble-book-bun" target="_blank">the Github page</a>.</p>
             </div>
         </div>
 
