added a FAQ item for remarks and feedback

--- a/site_gen/humble_astro/src/pages/faq.astro
+++ b/site_gen/humble_astro/src/pages/faq.astro
@@ -27,7 +27,9 @@ import Layout from '../layouts/Layout.astro';
         <div class="faq-item card">
             <h2>I have a suggestion on how you could improve the site / goodreads review</h2>
             <div class="faq-content">
-                <p>Thanks, we welcome any additions and remarks. Feel free to open up a pull request on <a href="https://github.com/JensPenny/humble-book-bun" target="_blank">the Github page</a>.</p>
+                <p>Thanks, we welcome any additions and remarks. Feel free to open up a pull request on <a href="https://github.com/JensPenny/humble-book-bun" target="_blank">the Github page</a>.
+                    Suggestions on how to improve the automatic search for better goodreads-hits is especially welcome, since fixing these is still done manually.
+                </p>
             </div>
         </div>
 
