fixed errors that could happen when a book was added without a description

--- a/site_gen/humble_astro/src/components/BookCard.astro
+++ b/site_gen/humble_astro/src/components/BookCard.astro
@@ -49,6 +49,9 @@ const generateStars = (rating: number) => {
 
 // Truncate description
 const truncateDescription = (desc: string, maxLength = 150) => {
+  if (!desc){
+    return "no parseable description found"
+  }
   // Remove HTML tags
   const textOnly = desc.replace(/<\/?[^>]+(>|$)/g, "");
   
