The basic implementation of the feature that shows previous bundles is done. Styling is still to be done

--- a/site_gen/humble_astro/src/components/BookListItem.astro
+++ b/site_gen/humble_astro/src/components/BookListItem.astro
@@ -97,14 +97,14 @@ const truncatedDescription = truncateDescription(description, 80);
     }
   </div>
 
-  {otherBundles.length > 0 && 
+  {otherBundles.length > 0 && (
   <div>
     <BundleListDropdown
-      title="Bundles containing this book:"
-      bundles={otherBundles.map((b) => ({ id: b.bundle_id, name: b.name }))} 
+      title={`Bundles containing this book: ${otherBundles.length}`}
+      bundles={otherBundles.map((b) => ({ id: b.bundle_id, name: b.name, start_bundle: b.start_bundle, end_bundle: b.end_bundle }))} 
     />
   </div>
-  }
+  )}
 </div>
 
 <style>
