--- a/site_gen/humble_astro/src/pages/faq.astro
+++ b/site_gen/humble_astro/src/pages/faq.astro
@@ -50,6 +50,15 @@ import Layout from '../layouts/Layout.astro';
                 </p>
             </div>
         </div>
+
+        <div class="faq-item card">
+            <h2>This book has been in way more bundles than shown</h2>
+            <div class="faq-content">
+                <p>
+                    The database that powers this site started the 24th of March 2025. Bundles and books added before that date are not included in the database.
+                </p>
+            </div>                                                 
+        </div>
     </section>
 </Layout>
 
